fix mobile overlap

--- a/src/css/object/project/_introduction.scss
+++ b/src/css/object/project/_introduction.scss
@@ -240,7 +240,7 @@
   flex-direction: column;
   gap: 24px;
   width: 100%;
-  height: 100vh;
+  height: 120vh;
   padding-top: 15vh;
   box-sizing: border-box;
   line-height: 1.5;
@@ -253,6 +253,7 @@
 
   @media (min-width: $break-point-mobile) {
     padding-top: 30vh;
+    height: 100vh;
   }
 
   &__input {
